<resources>
  <string name="app_name">JOIN</string>

  <string name="title_activity_view_image">ViewImageActivity</string>
  <string name="title_activity_main_tab">JOIN</string>
  <string name="title_activity_add_brand">添加品牌</string>
  <string name="title_activity_resetpasswd">重置密码</string>
  <string name="title_activity_brand_list">选择品牌</string>
  <string name="title_activity_add_promotion">发起推广</string>
  <string name="title_activity_edit_promotion">修改推广</string>
  <string name="title_activity_brand_detail">品牌主页</string>
  <string name="title_activity_brand_introduce">品牌介绍</string>
  <string name="title_activity_joined_list">报名伙伴</string>
  <string name="title_activity_join">我想合作</string>
  <string name="title_ativity_mine">个人信息</string>
  <string name="title_activity_update_password">修改密码</string>
  <string name="title_activity_mine_promption">我的推广</string>
  <string name="title_promption">推广</string>
  <string name="title_brand">品牌</string>
  <string name="title_message">消息</string>
  <string name="title_mine">我</string>
  <string name="title_activity_complete_promption">完成推广</string>
  <string name="title_activity_resubmit">重新认证</string>
  <string name="title_activity_system_notification">系统通知</string>

  <string name="brand_name">品牌名称</string>
  <string name="input_hint">请输入</string>
  <string name="licence">营业执照</string>
  <string name="phone">手机号码</string>
  <string name="verify_code">验证码</string>
  <string name="get_verify_code">获取验证码</string>
  <string name="password">密码</string>
  <string name="user_name">姓名</string>
  <string name="user_title">职位</string>
  <string name="user_card">工牌/名片</string>
  <string name="title_activity_signup">注册</string>
  <string name="choose_hint">请选择</string>
  <string name="forget_passwd">忘记了您的密码?</string>
  <string name="login">登 录</string>
  <string name="signup">新用户注册</string>
  <string name="verify_code_time_remaining">%1$d(S)</string>
  <string name="signup_suc">注册成功</string>
  <string name="resubmit_suc">重新提交成功</string>
  <string name="promotion_content_hint">填写推广描述，比如已有资源，让更多品牌能报名合作 &#8230;</string>
  <string name="promotion_title_hint">填写推广标题（15个字以内）</string>
  <string name="promotion_time">举办时间</string>
  <string name="promption_address">举办地点</string>
  <string name="promption_end">报名截止</string>
  <string name="promption_notes">报名须知</string>
  <string name="content_remaing">%1$d/%2$d</string>
  <string name="user_name_and_title">%1$s | %2$s</string>

  <string name="tab_title_posted_promption">发起的(%1$d)</string>
  <string name="tab_title_join_promption">参加的(%1$d)</string>
  <string name="tab_title_mine_posted_promption">我报名的(%1$d)</string>
  <string name="tab_title_mine_join_promption">我发起的(%1$d)</string>
  <string name="tab_title_member">成员(%1$d)</string>


  <string name="title_activity_join_detail">报名详情</string>
  <string name="action_share">分享</string>
  <string name="action_edit">编辑</string>
  <string name="posted_brand_name">举办方: %1$s</string>
  <string name="posted_join_end_date">报名截止: %1$s</string>
  <string name="unauthed_hint">需要用户审核通过后才能%1$s，请耐心等待</string>
  <string name="auth_failed_hint">抱歉，您的审核未通过，无法%1$s</string>

  <string name="action_search">搜索</string>
  <string name="action_add">添加</string>
  <string name="dialog_title">提示</string>
  <string name="action_post_promption">发起推广</string>
  <string name="action_msg">查看消息</string>
  <string name="action_view_my_promption">查看我的推广</string>
  <string name="action_view_my_brand">查看我的品牌</string>
  <string name="action_join_promption">参与推广</string>

  <string name="empty_hint_promption">暂无推广</string>
  <string name="empty_hint_brand">暂无品牌</string>
  <string name="empty_hint_posted_promption">暂无发起的推广</string>
  <string name="empty_hint_joined_promption">暂无参加的推广</string>
  <string name="empty_hint_search_promption">没有找到相关推广，换个关键词试试？</string>
  <string name="empty_hint_no_brand_introduce">暂无品牌介绍</string>
  <string name="empty_hint_no_system_notification">暂无系统通知</string>
  <string name="empty_hint_msg">暂无消息，赶紧去联系合作伙伴吧</string>

  <string name="hint_verify_code_sent">验证码已发送</string>
  <string name="hint_promption_posted">发布成功 通过审核后即可上线，请耐心等待</string>
  <string name="hint_signup_submitted">信息已提交，请耐心等待审核</string>
  <string name="hint_add_promption_bg">点击添加封面图片 建议上传16：9的图片</string>
  <string name="hint_promption_join_note">根据您的需求，比如: \n 需要活动场地</string>
  <string name="hint_promption_resubmit">修改已提交，通过审核后即可上线，请耐心等待</string>
  <string name="hint_promption_failed">抱歉，您的推广审核未通过</string>
  <string name="hint_acct_kickedoff">您的账号在其他手机登录</string>
  <string name="hint_reset_passwd_suc">您已成功重置密码</string>
  <string name="hint_wx_service_failed">IM服务异常，IM功能暂时不可用，如果想使用IM功能，请退出APP重试</string>
  <string name="hint_wx_service_disconnected">IM服务已经断开，如果想使用IM功能，请退出账户重新登录</string>
  <string name="hint_wx_service_logining">IM服务正在登录中，请稍后</string>
  <string name="hint_join_submit_suc">报名成功，您可以联系发起方</string>
  <string name="hint_data_inavaliable">数据不对，请退出重试</string>
  <string name="hint_accept_join">您确定同意此合作伙伴报名？</string>
  <string name="hint_reject_join">您确定拒绝此合作伙伴报名？</string>
  <string name="hint_nobody_joined">本次推广报名已截止，系统将为您结束推广，如需要延后报名截止请联系客服</string>
  <string name="hint_pick_joined_user">请确保已经勾选已参与的合作伙伴</string>
  <string name="hint_update_passwd_suc">修改密码成功</string>
  <string name="hint_state_update">状态已变更</string>
  <string name="hint_comfirm_joined_users">请确认本次推广的合作伙伴</string>
  <string name="hint_meadia_report">本次推广媒体报道</string>
  <string name="hint_promption_query">搜索推广活动</string>
  <string name="hint_brand_query_signup">搜索品牌名或成员名，搜不到可以点击右上角录入</string>
  <string name="hint_brand_query">搜索品牌名或成员名</string>
  <string name="hint_auth_failed">认证没有通过，可以修改重新认证</string>

  <string name="custom_ok_btn">我知道了</string>
  <string name="item_title_media_1">媒体１</string>
  <string name="item_title_media_2">媒体2</string>
  <string name="item_title_media_3">媒体2</string>

</resources>
