<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <com.ikaowo.join.modules.user.widget.DeletableEditTextView
        android:id="@+id/phone"
        android:layout_marginTop="24dp"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/phone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ikaowo.join.modules.user.widget.DeletableEditTextView
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:show_delete_icon="false"
            android:textSize="14sp"
            android:hint="@string/verify_code"/>

        <TextView
            android:id="@+id/verify_btn"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/verify_code"
            android:background="@drawable/shape_verify_code"
            android:layout_gravity="right|center_vertical"
            android:enabled="false"
            android:layout_marginBottom="6dp"
            android:text="获取验证码"/>
    </FrameLayout>

    <com.ikaowo.join.modules.user.widget.DeletableEditTextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/password"/>
</LinearLayout>