<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".modules.user.activity.ResetPasswdActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:showIn="@layout/activity_reset_passwd">

    <com.ikaowo.join.modules.user.widget.DeletableEditTextView
        android:id="@+id/phone"
        android:layout_marginTop="24dp"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/phone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.ikaowo.join.modules.user.widget.DeletableEditTextView
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:show_delete_icon="false"
            android:textSize="14sp"
            android:hint="@string/verify_code"/>

        <TextView
            android:id="@+id/verify_btn"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/verify_code"
            android:background="@drawable/shape_verify_code"
            android:layout_gravity="right|center_vertical"
            android:enabled="false"
            android:layout_marginBottom="6dp"
            android:text="获取验证码"/>
    </FrameLayout>

    <com.ikaowo.join.modules.user.widget.DeletableEditTextView
        android:id="@+id/passwod_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:hint="@string/password"/>
</LinearLayout>